sorted the spacing issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,10 +154,14 @@ div.polaroid {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 25px;
+    display: block;
+    margin: 0 auto;
   }
   div.container {
     text-align: center;
     padding: 10px 20px;
+    display: block;
+    margin: 0 auto;
   }
 
 img {
